{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 18,
  "lineage": "a947d1d8-638d-2175-5208-c96e7677d981",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "airflow_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:710543700077:instance/i-046e51a5359f6b42a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046e51a5359f6b42a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "shoreline_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0beb55dc6ea774058",
            "private_dns": "ip-10-123-1-80.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.1.80",
            "public_dns": "ec2-52-39-155-252.us-west-2.compute.amazonaws.com",
            "public_ip": "52.39.155.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00fc82b21db8e632d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd718547ecb8bcc9",
            "tags": {
              "Environment": "Shoreline-Dev",
              "Name": "shoreline-dev-airflow-server"
            },
            "tags_all": {
              "Environment": "Shoreline-Dev",
              "Name": "shoreline-dev-airflow-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037c50ed8b1765146"
            ]
          },
          "dependencies": [
            "aws_key_pair.shoreline_auth",
            "aws_security_group.shoreline_public_sg",
            "aws_subnet.shoreline_public_subnet",
            "aws_vpc.shoreline_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shoreline_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:710543700077:internet-gateway/igw-080f7dfb7204eef4f",
            "id": "igw-080f7dfb7204eef4f",
            "owner_id": "710543700077",
            "tags": {
              "Environment": "Shoreline-Dev",
              "Name": "shoreline-dev-igw"
            },
            "tags_all": {
              "Environment": "Shoreline-Dev",
              "Name": "shoreline-dev-igw"
            },
            "vpc_id": "vpc-0bbe0005ef1d4bff1"
          },
          "dependencies": [
            "aws_vpc.shoreline_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-080f7dfb7204eef4f",
            "id": "r-rtb-08967f676f159fe711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08967f676f159fe71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.shoreline_internet_gateway",
            "aws_route_table.shoreline_public_route_table",
            "aws_vpc.shoreline_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shoreline_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:710543700077:route-table/rtb-08967f676f159fe71",
            "id": "rtb-08967f676f159fe71",
            "owner_id": "710543700077",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080f7dfb7204eef4f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Shoreline-Dev",
              "Name": "shoreline-dev-public_rt"
            },
            "tags_all": {
              "Environment": "Shoreline-Dev",
              "Name": "shoreline-dev-public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbe0005ef1d4bff1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shoreline_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shoreline_public_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d62a94b96a5f90f",
            "route_table_id": "rtb-08967f676f159fe71",
            "subnet_id": "subnet-0dd718547ecb8bcc9"
          },
          "dependencies": [
            "aws_route_table.shoreline_public_route_table",
            "aws_subnet.shoreline_public_subnet",
            "aws_vpc.shoreline_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shoreline_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:710543700077:security-group/sg-037c50ed8b1765146",
            "description": "dev security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037c50ed8b1765146",
            "ingress": [
              {
                "cidr_blocks": [
                  "175.176.54.30/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev_sg",
            "name_prefix": "",
            "owner_id": "710543700077",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbe0005ef1d4bff1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shoreline_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shoreline_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:710543700077:subnet/subnet-0dd718547ecb8bcc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd718547ecb8bcc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "710543700077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shoreline-dev-public_subnet"
            },
            "tags_all": {
              "Name": "shoreline-dev-public_subnet"
            },
            "vpc_id": "vpc-0bbe0005ef1d4bff1"
          },
          "dependencies": [
            "aws_vpc.shoreline_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shoreline_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:710543700077:vpc/vpc-0bbe0005ef1d4bff1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0a020ae3f8415e800",
            "default_route_table_id": "rtb-0ba19810d5e10821b",
            "default_security_group_id": "sg-0fd0a962dd381bef5",
            "dhcp_options_id": "dopt-0bc0f46b21d55b79b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbe0005ef1d4bff1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba19810d5e10821b",
            "owner_id": "710543700077",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}